--- a/Projet Web Commerce/Views/PPGestionnaires/Statistiques.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/Statistiques.cshtml
@@ -23,7 +23,7 @@
                 @Model.VendeursList.Count()
             </p>
 
-            <b>Nombre de vendeurs par mois entre les dates sélectionnées  : </b><br>
+            <b>Nombre de vendeurs créer entre les mois sélectionnées  : </b><br>
             Date de début : <input type="month" id="startDateV" onchange="validateAndGenerateV()">
 
             Date de fin :  <input type="month" id="endDateV" onchange="validateAndGenerateV()"><br>
@@ -39,7 +39,7 @@
             </p>            
             <br />
 
-            <b>Nombre de connexions des clients regrouper par mois  entre les dates sélectionnées : </b><br>
+            <b>Nombre de client créer entre les mois sélectionnées  : </b><br>
             Date de début : <input type="month" id="startDateC" onchange="validateAndGenerateC()">
             Date de fin :  <input type="month" id="endDateC" onchange="validateAndGenerateC()"><br>
 
@@ -173,7 +173,7 @@
             const formattedDate = currentDate.getDate() + '/' + (currentDate.getMonth() + 1) + '/' + currentDate.getFullYear();
             const rapportText = "Rapport créé: " + formattedDate;
             doc.text(rapportText, 10, 10);
-            doc.text("Rapport sur le nombre de vendeurs par mois entre les dates sélectionnées", 10, 20);
+            doc.text("Rapport sur le nombre de vendeurs créer entre les mois sélectionnées", 10, 20);
             doc.text("Date de début: " + startDate, 10, 30);
             doc.text("Date de fin: " + endDate, 80, 30);
             doc.text(lines, 10, 40);
@@ -266,8 +266,8 @@
 
         var minDateV = new Date();
         for (var i = 0; i < vendeursList.length; i++) {
-            if (vendeursList[i].DateCreation) {
-                var dateComponents = vendeursList[i].DateCreation.split('-');
+            if (vendeursList[i].dateCreation) {
+                var dateComponents = vendeursList[i].dateCreation.split('-');
                 var year = parseInt(dateComponents[0]);
                 var month = parseInt(dateComponents[1]) - 1; 
                 var currentDate = new Date(year, month);
@@ -282,9 +282,10 @@
         generateReportV();
 
         var minDateC = new Date();
+       
         for (var i = 0; i < clientsList.length; i++) {
-            if (clientsList[i].DateCreation) {
-                var dateComponents = clientsList[i].DateCreation.split('-');
+            if (clientsList[i].dateCreation) {
+                var dateComponents = clientsList[i].dateCreation.split('-');
                 var year = parseInt(dateComponents[0]);
                 var month = parseInt(dateComponents[1]) - 1;
                 var currentDate = new Date(year, month);
