--- a/Projet Web Commerce/Views/MainMenu/CatalogueTous.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueTous.cshtml
@@ -206,12 +206,20 @@
 
                                 @if (SignInManager.IsSignedIn(User) && User.IsInRole("Client") && item.NombreItems > 0)
                                 {
-                                    <a asp-controller="PPProduits"
-                                       asp-route-id="@item.NoProduit"
-                                       asp-action="Details"
-                                       class="btn btn-secondary mt-auto" style="background-color:@backgroundButtonDetail; color: @textButtonDetail">
-                                        Details
-                                    </a>
+                                    <form asp-controller="PPProduits" asp-route-first="oui" asp-route-id="@item.NoProduit" asp-action="Details">
+
+                                        <input type="hidden" name="source" value="tous" />
+
+                                        @Html.HiddenFor(m => m.searchString)
+                                        @Html.HiddenFor(m => m.parPage)
+                                        @Html.HiddenFor(m => m.searchCat)
+                                        @Html.HiddenFor(m => m.pageNumber)
+                                        @Html.HiddenFor(m => m.dateApres)
+                                        @Html.HiddenFor(m => m.dateAvant)
+                                        @Html.HiddenFor(m => m.sortOrder)
+
+                                        <button type="submit" class="btn btn-secondary mt-auto" style="margin-bottom:10px; background-color:@backgroundButtonDetail; color: @textButtonDetail">Details</button>
+                                    </form>
                                     <form asp-controller="MainMenu" id="formAjoutPanier" asp-action="AjoutPanier" method="post">
                                         <input type="hidden" name="NoProduit" value="@item.NoProduit" />
                                         <input type="hidden" name="NoClient" value="@Model.noClient" />
@@ -224,6 +232,7 @@
                                         @Html.HiddenFor(m => m.pageNumber)
                                         @Html.HiddenFor(m => m.dateApres)
                                         @Html.HiddenFor(m => m.dateAvant)
+                                        @Html.HiddenFor(m => m.sortOrder)
 
                                         <br />
                                         <button class="btn btn-secondary" style="background-color:@backgroundButtonAjouter; color:@textButtonAjouter" type="submit">Ajouter au panier</button>
