--- a/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
@@ -103,6 +103,7 @@
 
         @using (Html.BeginForm("CatalogueVendeur", "MainMenu", FormMethod.Post, new { id = "mainForm" }))
                 {
+                @Html.HiddenFor(model => model.premiereConnexion)
                 @Html.HiddenFor(model => model.nomAffaire)
                     <div class="row" style="font-family:@font">
                         <div class="col-md-4 d-flex align-items-start">
@@ -248,12 +249,23 @@
                                 {
                                     <p class="card-text">Prix : @Html.DisplayFor(modelItem => item.PrixDemande) $ </p>
                                 }
-                                <a asp-controller="PPProduits"
-                                   asp-route-id="@item.NoProduit"
-                                   asp-action="Details"
-                                   class="btn btn-secondary mt-auto" style="margin-bottom:10px; background-color:@backgroundButtonDetail; color: @textButtonDetail">
-                                    Details
-                                </a>
+                                <form asp-controller="PPProduits" asp-route-first="oui" asp-route-id="@item.NoProduit" asp-action="Details" method="post">
+
+                                    <input type="hidden" name="source" value="vendeur" />
+
+                                    @Html.HiddenFor(m => m.searchString)
+                                    @Html.HiddenFor(m => m.parPage)
+                                    @Html.HiddenFor(m => m.searchCat)
+                                    @Html.HiddenFor(m => m.pageNumber)
+                                    @Html.HiddenFor(m => m.dateApres)
+                                    @Html.HiddenFor(m => m.dateAvant)
+                                    @Html.HiddenFor(m => m.nomAffaire)
+                                    @Html.HiddenFor(m => m.sortOrder)
+                                    @Html.HiddenFor(m => m.premiereConnexion)
+
+                                    <button type="submit" class="btn btn-secondary mt-auto" style="margin-bottom:10px; background-color:@backgroundButtonDetail; color: @textButtonDetail">Details</button>
+
+                                </form>
 
                                 
 
@@ -274,6 +286,8 @@
                                         @Html.HiddenFor(m => m.dateApres)
                                         @Html.HiddenFor(m => m.dateAvant)
                                         @Html.HiddenFor(m => m.nomAffaire)
+                                        @Html.HiddenFor(m => m.sortOrder)
+                                        @Html.HiddenFor(m => m.premiereConnexion)
 
                                         <br />
                                         <button class="btn btn-secondary" style="background-color:@backgroundButtonAjouter; color:@textButtonAjouter" type="submit">Ajouter au panier</button>
